Some Jetty 9 additions, formatting & cleanup, and old changes.